--- a/index.html
+++ b/index.html
@@ -59,44 +59,44 @@
               </div>
               <div class="hero-row1">
                 <div class="hero-col1">
-                  <img src="images/redbus04.png" alt="" width="60px" height="60px">
+                  <a href="index.html"><img src="images/redbus04.png" alt="" width="60px" height="60px"></a>
                   <div class="bus">
                     <div class="bus1">
-                      <p>BUS</p>
+                      <a href="index.html"> <p>BUS</p></a>
                     </div>
-                    <h3>Save up to Rs 250 on bus tickets</h3>
-                    <p>Valid till 31 Dec</p>
+                    <a href="index.html"><h3>Save up to Rs 250 on bus tickets</h3></a>
+                    <a href="index.html"><p>Valid till 31 Dec</p></a>
                     <div class="first">
-                      <h5>first</h5>
-                      <i class="fa-regular fa-copy"></i>
+                      <a href="index.html"><h5>first</h5></a>
+                      <a href="index.html"><i class="fa-regular fa-copy"></i></a>
                     </div>
                   </div>
                 </div>
                 <div class="hero-col2">
-                  <img src="images/redbus07.png" alt="" width="60px" height="60px">
+                  <a href="index.html"><img src="images/redbus07.png" alt="" width="60px" height="60px"></a>
                   <div class="bus">
                     <div class="bus1">
-                      <p>BUS</p>
+                      <a href="index.html"><p>BUS</p></a>
                     </div>
-                    <h3>Save up to Rs 350 on AP, TS routes</h3>
-                    <p>Valid till 31 Dec</p>
+                    <a href="index.html"><h3>Save up to Rs 350 on AP, TS routes</h3></a>
+                    <a href="index.html"><p>Valid till 31 Dec</p></a>
                     <div class="first">
-                      <h5>first</h5>
-                      <i class="fa-regular fa-copy"></i>
+                      <a href="index.html"><h5>first</h5></a>
+                      <a href="index.html"><i class="fa-regular fa-copy"></i></a>
                     </div>
                   </div>
                 </div>
                 <div class="hero-col3">
-                  <img src="images/redbus08.png" alt="" width="60px" height="60px">
+                  <a href="index.html"><img src="images/redbus08.png" alt="" width="60px" height="60px"></a>
                   <div class="bus">
                     <div class="bus1">
-                      <p>BUS</p>
+                      <a href="index.html"><p>BUS</p></a>
                     </div>
-                    <h3>Save up to Rs 500 with icici</h3>
-                    <p>Valid till 06 Dec</p>
+                    <a href="index.html"><h3>Save up to Rs 500 with icici</h3></a>
+                    <a href="index.html"><p>Valid till 06 Dec</p></a>
                     <div class="first">
-                      <h5>first</h5>
-                      <i class="fa-regular fa-copy"></i>
+                      <a href="index.html"><h5>first</h5></a>
+                      <a href="index.html"><i class="fa-regular fa-copy"></i></a>
                     </div>
                   </div>
                 </div>
@@ -313,36 +313,52 @@
               <h2>Global Presence</h2>
               <div class="mainpart8row1">
                 <div class="mainpart8col1">
+                  <a href="index.html">
                   <img src="images/redbus41.svg" alt="" width="110px">
                   <h3>Colombia</h3>
+                  </a>
                 </div>
                 <div class="mainpart8col1">
+                  <a href="index.html">
                   <img src="images/redbus42.svg" alt="" width="110px">
                   <h3>India</h3>
+                  </a>
                 </div>
                 <div class="mainpart8col1">
+                  <a href="index.html">
                   <img src="images/redbus43.svg" alt="" width="110px">
                   <h3>Indonesia</h3>
+                  </a>
                 </div>
                 <div class="mainpart8col1">
+                  <a href="index.html">
                   <img src="images/redbus44.svg" alt="" width="110px">
                   <h3>Malaysia</h3>
+                  </a>
                 </div>
                 <div class="mainpart8col1">
+                  <a href="index.html">
                   <img src="images/redbus45.svg" alt="" width="110px">
                   <h3>Peru</h3>
+                  </a>
                 </div>
                 <div class="mainpart8col1">
+                  <a href="index.html">
                   <img src="images/redbus46.svg" alt="" width="110px">
                   <h3>Singapore</h3>
+                  </a>
                 </div>
                 <div class="mainpart8col1">
+                  <a href="index.html">
                   <img src="images/redbus47.svg" alt="" width="110px">
                   <h3>Vietnam</h3>
+                  </a>
                 </div>
                 <div class="mainpart8col1">
+                  <a href="index.html">
                   <img src="images/redbus48.svg" alt="" width="110px">
                   <h3>Cambodia</h3>
+                  </a>
                 </div>
               </div>
             </div>
@@ -355,12 +371,15 @@
               <h1>Bus Booking redDeals on redBus</h1>
               <p>Don't miss out on these incredible offers, book your bus tickets now and travel with convenience and affordability. Hurry, grab the best bus booking deals before they're gone!</p>
               <div class="mainpart10row1">
-                <img src="images/redbus01.svg" alt="" width="60px">
+                <a href="index.html">
+                <img src="images/redbus01.svg" alt="" width="60px"></a>
                 <div class="mainpart10col1">
-                  <h1>Unlock Unbeatable Exclusive redDeals! <span> 20% OFF </span></h1>
-                  <p><span>600</span> Deals | <span>333</span> Bus Operators |<span>121327 </span>Routes |</p>
+                  <a href="index.html">
+                  <h1>Unlock Unbeatable Exclusive redDeals! <span> 20% OFF </span></h1></a>
+                  <a href="index.html">
+                  <p><span>600</span> Deals | <span>333</span> Bus Operators |<span>121327 </span>Routes |</p></a>
                 </div>
-                <button>Book now</button>
+                <button><a href="index.html">Book now</a></button>
               </div>
             </div>
             <div class="mainpart11">
@@ -375,35 +394,43 @@
             </div>
             <div class="mainpart12">
               <div class="mainpart12row1" id="general">
-                <p>Can I track the location of my booked bus online?</p>
+                <a href="index.html">
+                <p>Can I track the location of my booked bus online?</p></a>
                 <i class="fa-solid fa-plus"></i>
               </div>
               <div class="mainpart12row1" id="general">
-                <p>What are the advantages of purchasing a bus ticket with redBus?</p>
+                <a href="index.html">
+                <p>What are the advantages of purchasing a bus ticket with redBus?</p></a>
                 <i class="fa-solid fa-plus"></i>
               </div>
               <div class="mainpart12row1" id="general">
-                <p>Why book bus tickets online on redBus?</p>
+                <a href="index.html">
+                <p>Why book bus tickets online on redBus?</p></a>
                 <i class="fa-solid fa-plus"></i>
               </div>
               <div class="mainpart12row1" id="general">
-                <p>Do I need to create an account on the redBus site to book my bus ticket?</p>
+                <a href="index.html">
+                <p>Do I need to create an account on the redBus site to book my bus ticket?</p></a>
                 <i class="fa-solid fa-plus"></i>
               </div>
               <div class="mainpart12row1" id="general">
-                <p>Does bus booking online cost me more?</p>
+                <a href="index.html">
+                <p>Does bus booking online cost me more?</p></a>
                 <i class="fa-solid fa-plus"></i>
               </div>
               <div class="mainpart12row1" id="general">
-                <p>How can I get the discounts on the bus booking?</p>
+                <a href="index.html">
+                <p>How can I get the discounts on the bus booking?</p></a>
                 <i class="fa-solid fa-plus"></i>
               </div>
               <div class="mainpart12row1" id="general">
-                <p>What's New in Bus Booking on redBus?</p>
+                <a href="index.html">
+                <p>What's New in Bus Booking on redBus?</p></a>
                 <i class="fa-solid fa-plus"></i>
               </div>
               <div class="mainpart12row1" id="general">
-                <p>Can I book a Government bus ticket on redBus?</p>
+                <a href="index.html">
+                <p>Can I book a Government bus ticket on redBus?</p></a>
                 <i class="fa-solid fa-plus"></i>
               </div>
             </div>
@@ -419,21 +446,25 @@
           <div class="footer">
             <div class="footer1">
               <div class="footer1h2">
-                <h2>Popular Bus Routes</h2>
+                <a href="index.html">
+                <h2>Popular Bus Routes</h2></a>
                 <i class="fa-solid fa-chevron-down"></i>
               </div>
               <div class="footer1h2">
-                <h2>Popular Cities</h2>
+                <a href="index.html">
+                <h2>Popular Cities</h2></a>
                 <i class="fa-solid fa-chevron-down"></i>
               </div>
               <div class="footer1h2">
-                <h2>Popular Bus Operators</h2>
+                <a href="index.html">
+                <h2>Popular Bus Operators</h2></a>
                 <i class="fa-solid fa-chevron-down"></i>
               </div>
             </div>
             <div class="footer2">
               <div class="footer2row1">
-                <img src="images/redbus01.svg" alt="" width="90px">
+                <a href="index.html">
+                <img src="images/redbus01.svg" alt="" width="90px"></a>
                 <p>redBus is the world's largest online bus ticket booking service trusted by over 25 million happy customers globally. redBus offers bus ticket booking through its website, iOS and Android mobile apps for all major routes.</p>
               </div>
               <div class="footer2row2">
@@ -484,10 +515,10 @@
                 <p>Ⓒ 2024 Redbus India Pvt Ltd. All rights reserved</p>
               </div>
               <div class="footer3row2">
-                <i class="fa-brands fa-facebook"></i>
-                <i class="fa-brands fa-linkedin"></i>
-                <i class="fa-brands fa-twitter"></i>
-                <i class="fa-brands fa-instagram"></i>
+                <a href="index.html"><i class="fa-brands fa-facebook"></i></a>
+                <a href="index.html"><i class="fa-brands fa-linkedin"></i></a>
+                <a href="index.html"><i class="fa-brands fa-twitter"></i></a>
+                <a href="index.html"><i class="fa-brands fa-instagram"></i></a>
               </div>
             </div>
           </div>
